k8s/mussubotti-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mussubotti
  namespace: mussubot
  labels:
    app: mussubotti
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mussubotti
  template:
    metadata:
      labels:
        app: mussubotti
    spec:
      containers:
      - name: mussubotti
        image: ${IMAGE_REPO}:${IMAGE_TAG}
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          runAsUser: 10000
          capabilities:
            drop: [ALL]
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
